; ModuleID = '/home/carl/AnghaBench/mongoose/extr_mongoose.c_cs_time.c'
source_filename = "/home/carl/AnghaBench/mongoose/extr_mongoose.c_cs_time.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timeval = type { i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local double @cs_time() #0 {
  %1 = alloca double, align 8
  %2 = alloca double, align 8
  %3 = alloca %struct.timeval, align 8
  %4 = call i64 @gettimeofday(%struct.timeval* %3, i32* null)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %7

6:                                                ; preds = %0
  store double 0.000000e+00, double* %1, align 8
  br label %17

7:                                                ; preds = %0
  %8 = getelementptr inbounds %struct.timeval, %struct.timeval* %3, i32 0, i32 1
  %9 = load i64, i64* %8, align 8
  %10 = sitofp i64 %9 to double
  %11 = getelementptr inbounds %struct.timeval, %struct.timeval* %3, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = sitofp i64 %12 to double
  %14 = fdiv double %13, 1.000000e+06
  %15 = fadd double %10, %14
  store double %15, double* %2, align 8
  %16 = load double, double* %2, align 8
  store double %16, double* %1, align 8
  br label %17

17:                                               ; preds = %7, %6
  %18 = load double, double* %1, align 8
  ret double %18
}

declare dso_local i64 @gettimeofday(%struct.timeval*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
